--- a/app/globals.css
+++ b/app/globals.css
@@ -61,7 +61,6 @@
   }
 }
 
-
 @theme inline {
   --color-background: var(--background);
   --color-foreground: var(--foreground);
@@ -110,3 +109,11 @@
   }
 }
 
+@layer utilities {
+  .header_button {
+    @apply cursor-pointer p-1 border-transparent hover:border-white rounded-[2px];
+  }
+  .h1_bold {
+    @apply font-bold text-2xl lg:text-3xl;
+  }
+}
